# renovate-uv-dependency-groups

./: pyproject.toml  renovate.json5
