[project]
name = "foo"
version = "0.1.0"
requires-python = "~=3.13"
dependencies = ["arrow==1.2.3"]

[dependency-groups]
lint = ["deptry==0.19.0"]
test = ["pytest==8.3.3"]
typing = ["mypy==1.12.1"]
all = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typing"},
    "pre-commit==4.0.0",
    "watchfiles==0.24.0",
]

